--- a/prd/docker-compose-prd.yml
+++ b/prd/docker-compose-prd.yml
@@ -9,4 +9,4 @@ authService:
     DB_DRIVER: org.postgresql.Driver
     HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
     HIBERNATE_HBM2DDL_AUTO: update
-    
+    ALPHA_VEC: E66YYu84iW50GE66
