--- a/prd/docker-compose-prd.yml
+++ b/prd/docker-compose-prd.yml
@@ -3,7 +3,7 @@ authService:
     file: ../docker-compose.yml
     service: authService
   environment:
-    DB_URL: jdbc:postgresql://172.17.0.1:5432/authservice
+    DB_URL: jdbc:postgresql://postgres:5432/authservice
     DB_USER: postgres
     DB_PASS: d4xZEoqO7HS5i2jpJL8vGQ==
     DB_DRIVER: org.postgresql.Driver
