--- a/test/docker-compose-test.yml
+++ b/test/docker-compose-test.yml
@@ -1,14 +1,12 @@
 authService:
-  image: cjmason8/auth-service:latest
+  extends:
+    file: ../docker-compose.yml
+    service: authService
   environment:
-    DB_URL: jdbc:postgresql://172.17.0.1:5432/authservice
+    DB_URL: jdbc:postgresql://postgres:5432/authservicetest
     DB_USER: postgres
-    DB_PASS: jade76
+    DB_PASS: fjFSVC3Pm+d0Miy0ry3EWQ==
     DB_DRIVER: org.postgresql.Driver
     HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
     HIBERNATE_HBM2DDL_AUTO: update
-  ports:
-    - "8082:8080"
-  volumes:
-    - /applogs:/applogs
-    
+    ALPHA_VEC: E66YYu84iW50GE66
