upgrade to java12

--- a/Dockerfile_lcl
+++ b/Dockerfile_lcl
@@ -1,17 +1,6 @@
-FROM adoptopenjdk/openjdk11:x86_64-alpine-jdk-11.28
-
-RUN adduser -D -u 1000 localUser
-
-RUN mkdir /app
-
-RUN chown localUser /app
-
-RUN apk update
-RUN apk add curl
+FROM cjmason8/alpine-openjdk:jre-12.33-alpine
 
 COPY target/authservice-0.0.1-SNAPSHOT.jar /app/authService.jar
 COPY runLocal.sh /app/run.sh
-
-USER localUser
 
 CMD ["/app/run.sh"]
