--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 authService:
   environment:
      INFO_APP_VERSION: ${TAG_NAME}
-     TZ: Australia/Melbourne
   image: cjmason8/auth-service:${TAG_NAME}
   external_links:
     - postgres/postgres:postgres
   volumes:
     - /applogs:/applogs
     - /resources:/resources
-
+    - /etc/localtime:/etc/localtime
