--- a/Dockerfile_lcl
+++ b/Dockerfile_lcl
@@ -1,4 +1,4 @@
-FROM cjmason8/alpine-openjdk:x86_64-alpine-jre-15_36
+FROM cjmason8/alpine-openjdk:jre-16.0.1_9-alpine
 
 COPY target/authservice-0.0.1-SNAPSHOT.jar /app/authService.jar
 COPY runLocal.sh /app/run.sh
