--- a/Dockerfile_lcl
+++ b/Dockerfile_lcl
@@ -1,4 +1,4 @@
-FROM cjmason8/alpine-openjdk:openjdk-17-alpine-v2
+FROM cjmason8/alpine-openjdk:17-jre-alpine
 
 COPY target/authservice-0.0.1-SNAPSHOT.jar /app/authService.jar
 COPY runLocal.sh /app/run.sh
